# FMQml

./: CMakeLists.txt  README.md  STATUS_2026-05-15.md  qml-javascript-to-cpp-migration-plan.md
.github/workflows/: windows-core-build.yml
docs/: external-drag-drop-plan.md  gradient-visual-refresh-follow-up.md  linux-admin-mode.md  local-file-badge-icons-plan.md  megaInit.patch  megaNZplan.md  near-term-work-plan.md  next-feature-work-plan.md  opposite-panel-drag-drop-plan.md  providerThumbs.patch  qa-regression-suite.md
qml/: App.qml  Splash.qml
qml/components/: BatchRenameDialog.qml  ChecksumDialog.qml  ColumnPickerMenu.qml  CommandPalette.qml  ConflictDialog.qml  DeleteConfirmDialog.qml  DiskUsageDialog.qml  DriveContextMenu.qml  DrivePropertiesHero.qml  FavoritesView.qml  FileBriefAdaptiveDelegate.qml  FileBriefDelegate.qml  FileBriefResizeDelegate.qml  FileDelegate.qml  FileGridResizeDelegate.qml  FilePanel.qml  FilePanelHeader.qml  FileTableAdaptiveDelegate.qml  FileTableDelegate.qml  FileTableResizeDelegate.qml  FileWorkspace.qml  FolderCompareDialog.qml  HelpDialog.qml  IconButton.qml  IsoMountDialog.qml  MainToolbar.qml  OpenWithDialog.qml  OperationsDrawer.qml  PathBar.qml  PdfPreviewer.qml  PluginManagerDialog.qml  PreviewPane.qml  PropertiesDialog.qml  QuickLook.qml  SettingsDialog.qml  Sidebar.qml  StorageView.qml  ThemeEditorDialog.qml  ThemeEditorModePill.qml  ThemeEditorPreviewCard.qml  (+9 more)
qml/components/app/: AppShortcuts.qml  CommandRegistry.qml  PreviewCoordinator.qml  WorkspaceOverlays.qml
qml/components/common/: AmbientPanelBackground.qml  SurfaceCard.qml
qml/components/dialogs/: DialogActionButton.qml  DialogFooter.qml  DialogShell.qml
qml/components/filepanel/: FileHoverPreviewCard.qml  FileIconCell.qml  FileItemStateLayer.qml  FileNameEditor.qml  FilePanelContextMenu.qml  FilePanelDragCoordinator.qml  FilePanelDragPreview.qml  FilePanelDropOverlay.qml  FilePanelEmptyMenu.qml  FilePanelErrorBanner.qml  FilePanelFilterPopover.qml  FilePanelFooter.qml  FilePanelIconPolicy.qml  FilePanelMenuHost.qml  FilePanelOppositeDropOverlay.qml  FilePanelSelectionActions.qml  FilePanelSelectionBadge.qml  FilePanelShell.qml  FilePanelStatusBar.qml  FilePanelViewMenu.qml  OppositePanelDropMenu.qml  PluginActionResultDialog.qml  SelectionToggleBadge.qml
qml/components/preview/: ArchiveLimitedPreview.qml  ArchivePreview.qml  AudioPlaybackControls.qml  AudioPreview.qml  BookPreview.qml  ExecutablePreview.qml  FolderPreview.qml  FontPreview.qml  ImagePreview.qml  MediaPreview.qml  MetadataPreview.qml  PdfPreviewFallback.qml  PreviewFactsPanel.qml  PreviewHeader.qml  PreviewMetaStrip.qml  PreviewPropertiesList.qml  PreviewRenderer.qml  TextPreview.qml  UnsupportedPreview.qml  VideoPreview.qml  ZoomableImagePreview.qml
qml/components/properties/: ActionPill.qml  AttributeToggleRow.qml  DialogTabButton.qml  DriveInfoRow.qml  DriveMetricCard.qml  PermissionToggle.qml  ProgressRing.qml  SpecialModeToggle.qml
qml/components/settings/: SettingsTypographySection.qml
qml/components/sidebar/: SidebarFolderDelegate.qml
qml/components/storage/: QuickAccessGrid.qml  StorageDriveGrid.qml
qml/components/toolbar/: NavigationControls.qml  ToolbarActions.qml  ToolbarPathEditor.qml  ToolbarSearch.qml  ToolbarSegment.qml  ViewControls.qml
qml/style/: Theme.qml
src/: main.cpp
src/app/: AppServices.cpp  AppServices.h  MainWindowSetup.cpp  MainWindowSetup.h  QmlEngineBootstrap.cpp
src/controllers/: AdminController.cpp  AdminController.h  AppSettingsController.cpp  AppSettingsController.h  BatchRenameSession.cpp  BatchRenameSession.h  FavoritesController.cpp  FilePanelController.cpp  FilePanelController.h  FilePanelControllerLaunch.cpp  FilePanelControllerMutations.cpp  FolderCompareController.cpp  FolderCompareController.h  PluginActionController.cpp  PluginActionController.h  PropertiesController.cpp  PropertiesController.h  QuickLookController.cpp  QuickLookController.h  ThemeController.cpp  ThemeController.h  WorkspaceController.cpp  WorkspaceController.h
src/core/: ArchiveFileProvider.cpp  ArchiveSupport.cpp  DirectoryScanner.cpp  DiskUsageScanner.cpp  DriveUtils.cpp  DriveUtils.h  FileAccessResolver.cpp  FileAccessResolver.h  FileActionPlugin.h  FileError.cpp  FileError.h  FileProvider.h  FileProviderFactory.cpp  FileProviderFactory.h  FileProviderPlugin.h  FileProviderPluginRegistry.cpp  FileProviderPluginRegistry.h  FileSearchScanner.cpp  FileSearchScanner.h  FileTypeIconResolver.cpp  FileTypeIconResolver.h  FolderCompareScanner.cpp  FolderCompareScanner.h  FolderSizeCalculator.cpp  IconProvider.cpp  IconProvider.h  IsoMountManager.cpp  IsoMountManager.h  LaunchService.cpp  LinuxAdminBroker.cpp  LinuxAdminBroker.h  LinuxAdminPolicy.cpp  LinuxAdminPolicy.h  LinuxAdminSession.cpp  LinuxAdminSession.h  LinuxFileEnumerator.cpp  LinuxFileEnumerator.h  LocalFileProvider.cpp  LocalFileProvider.h  LocalFileProviderMetadata.inc  (+14 more)
src/models/: BatchRenamePreviewModel.cpp  BatchRenamePreviewModel.h  BatchRenameRuleModel.cpp  BatchRenameRuleModel.h  DirectoryModel.cpp  DirectoryModel.h  FolderCompareModel.cpp  FolderCompareModel.h  PlacesModel.cpp  PlacesModel.h  TreeModel.cpp  TreeModel.h
src/plugins/ftp/: FtpFileProviderPlugin.cpp  FtpFileProviderPlugin.h
src/plugins/gdrive/: GDriveFileProviderPlugin.cpp
src/plugins/mega/: MegaAuth.cpp  MegaAuth.h  MegaCache.cpp  MegaCache.h  MegaClient.cpp  MegaFileProvider.cpp  MegaFileProvider.h  MegaFileProviderPlugin.cpp  MegaProviderActions.cpp  MegaProviderActions.h  MegaProviderRuntime.cpp  MegaProviderRuntime.h
src/plugins/mock/: MockFileProviderPlugin.cpp  MockFileProviderPlugin.h
tests/core/: BatchRenameEngineTest.cpp  BatchRenameSessionTest.cpp  FolderCompareScannerTest.cpp  LinuxAdminBrokerTest.cpp  LinuxAdminPolicyTest.cpp  LinuxAdminSessionTest.cpp  LinuxFileAccessResolverTest.cpp  MegaProviderPublicLinkTest.cpp
tests/scanners/: LinuxRootTraversalTest.cpp
tools/access-audit/: main.cpp
